[gd_scene load_steps=11 format=3 uid="uid://1h1qbdfycuob"]

[ext_resource type="Script" path="res://Scripts/Tree.gd" id="1_bi5ff"]
[ext_resource type="Texture2D" uid="uid://ccewcqd5i1m47" path="res://Art Assets/tilesets/beach/tree.png" id="1_qbhe1"]
[ext_resource type="Texture2D" uid="uid://du80mnsq4v3u1" path="res://Art Assets/pictures/tree-dialog.png" id="3_ou63t"]
[ext_resource type="FontFile" uid="uid://b5yvpgi2fqp53" path="res://Compliments/monogram.ttf" id="4_4g0th"]
[ext_resource type="Texture2D" uid="uid://bh0o638tnq01m" path="res://Art Assets/pictures/button.png" id="5_32vau"]
[ext_resource type="Theme" uid="uid://b0vcypc2t0jju" path="res://progress.tres" id="6_omvp6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ekaug"]
size = Vector2(41, 29.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iegky"]
size = Vector2(79, 72.5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j6uem"]
texture = ExtResource("5_32vau")
texture_margin_left = 8.0
texture_margin_top = 2.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
region_rect = Rect2(2, 8, 60, 16)

[sub_resource type="Theme" id="Theme_y1k4e"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource("StyleBoxTexture_j6uem")
Button/styles/pressed = null

[node name="Tree" type="StaticBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_bi5ff")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -96)
texture = ExtResource("1_qbhe1")
offset = Vector2(0, -30)
hframes = 4

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -56.25)
shape = SubResource("RectangleShape2D_ekaug")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -60.75)
shape = SubResource("RectangleShape2D_iegky")

[node name="ReplantDialog" type="VBoxContainer" parent="."]
visible = false
z_index = 10
offset_left = -88.0
offset_top = -200.0
offset_right = 88.0
offset_bottom = -98.0

[node name="MarginContainer" type="MarginContainer" parent="ReplantDialog"]
layout_mode = 2

[node name="Background" type="NinePatchRect" parent="ReplantDialog/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_ou63t")
patch_margin_left = 6
patch_margin_top = 20
patch_margin_right = 6
patch_margin_bottom = 24

[node name="Padding" type="MarginContainer" parent="ReplantDialog/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Wrapper" type="VBoxContainer" parent="ReplantDialog/MarginContainer/Padding"]
layout_mode = 2

[node name="Label" type="Label" parent="ReplantDialog/MarginContainer/Padding/Wrapper"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_4g0th")
theme_override_font_sizes/font_size = 16
text = "Pohon bakau kecil"
horizontal_alignment = 1

[node name="Button" type="Button" parent="ReplantDialog/MarginContainer/Padding/Wrapper"]
layout_mode = 2
theme = SubResource("Theme_y1k4e")
theme_override_fonts/font = ExtResource("4_4g0th")
text = "Tanam kembali (150)"

[node name="ProgressBar" type="ProgressBar" parent="ReplantDialog/MarginContainer/Padding/Wrapper"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("6_omvp6")
show_percentage = false

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="pressed" from="ReplantDialog/MarginContainer/Padding/Wrapper/Button" to="." method="_on_button_pressed"]
